cmake_minimum_required(VERSION 3.14)

add_library(LongestCommonSubsequence INTERFACE)
target_include_directories(LongestCommonSubsequence INTERFACE include)

add_executable(LongestCommonSubsequenceTest test/longest_common_subsequence_test.cpp)
target_link_libraries(LongestCommonSubsequenceTest PRIVATE LongestCommonSubsequence)
add_test(LongestCommonSubsequenceTest LongestCommonSubsequenceTest)
